--- a/ECommerceMVC_CSharp/appsettings.json
+++ b/ECommerceMVC_CSharp/appsettings.json
@@ -1,4 +1,7 @@
 {
+  "ConnectionStrings": {
+    "HShop": "Server=DESKTOP-98LTGKS;Database=Hshop2023;Integrated Security=True;Trust Server Certificate=True"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
